Modify two instances of "own" (#144)
SHA: 89f7d152ce1b95df567822909099412c76923800
Reason: push, by @darobin

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1027,7 +1027,7 @@ then they sacrifice a proportionate amount of their privacy protections, but</p>
 <li>Often the service can only prevent the norm violation by also collecting data from
 innocent users. This extra collection is not always <a data-link-type="dfn" href="#dfn-appropriately" class="internalDFN" id="ref-for-dfn-appropriately-7">appropriate</a>, especially if it
 allows pervasive monitoring ([<cite><a class="bibref" data-link-type="biblio" href="#bib-rfc7258" title="Pervasive Monitoring Is an Attack">RFC7258</a></cite>], [<cite><a class="bibref" data-link-type="biblio" href="#bib-rfc7687" title="Report from the Strengthening the Internet (STRINT) Workshop">RFC7687</a></cite>]).</li>
-<li>If a service owner wants to collect some extra data, it can be tempting for them to
+<li>If a service operator wants to collect some extra data, it can be tempting for them to
 define norms and proportionality that allow them to do so.</li>
 </ol>
 <p>The following examples illustrate some of the tensions:</p>
@@ -1078,7 +1078,7 @@ fully expect more specific <a data-link-type="dfn" href="#dfn-context" class="in
 <a data-link-type="dfn" href="#dfn-information" class="internalDFN" id="ref-for-dfn-information-8">information flows</a>.</p>
 <p>To the extent possible, <a data-link-type="dfn" href="#dfn-user-agent" class="internalDFN" id="ref-for-dfn-user-agent-19">user agents</a> are expected to enforce these <a data-link-type="dfn" href="#dfn-principles" class="internalDFN" id="ref-for-dfn-principles-17">principles</a>. However, this is not
 always possible and additional enforcement mechanisms are needed. One particularly salient issue
-is that a <a data-link-type="dfn" href="#dfn-context" class="internalDFN" id="ref-for-dfn-context-7">context</a> is not defined in terms of who owns it (it is not a <a data-link-type="dfn" href="#dfn-party" class="internalDFN" id="ref-for-dfn-party-11">party</a>). Sharing
+is that a <a data-link-type="dfn" href="#dfn-context" class="internalDFN" id="ref-for-dfn-context-7">context</a> is not defined in terms of who owns or controls it (it is not a <a data-link-type="dfn" href="#dfn-party" class="internalDFN" id="ref-for-dfn-party-11">party</a>). Sharing
 <a data-link-type="dfn" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-12">data</a> between different <a data-link-type="dfn" href="#dfn-context" class="internalDFN" id="ref-for-dfn-context-8">contexts</a> of a single company is just as much a <a data-link-type="dfn" href="#dfn-privacy-violation" class="internalDFN" id="ref-for-dfn-privacy-violation-2">privacy violation</a> as
 if the same data were shared between unrelated <a data-link-type="dfn" href="#dfn-party" class="internalDFN" id="ref-for-dfn-party-12">parties</a>.</p>
 <div class="issue" id="issue-container-generatedID-0"><div role="heading" class="issue-title marker" id="h-issue-0" aria-level="2"><span>Issue</span></div><aside class="">
