add note that there is not consensus around the personal data principals

--- a/index.html
+++ b/index.html
@@ -1035,6 +1035,13 @@ of an event that occurs nearly-simultaneously on both sites.
   This section has not been edited for narrative.
 </aside>
 
+<aside class="issue">
+  There is not currnetly consensus among the authors and contributors to this
+  document about the below principles.
+  Please see <a href="https://github.com/w3ctag/privacy-principles/issues/150">this issue</a>
+  for more details.
+</aside>
+
 <div class="practice">
 
 <p><span class="practicelab" id="user-agent-data-sharing">
