get rid of "Principles for"

--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@ if the same data were shared between unrelated [=parties=].
 </aside>
 
 
-## Principles for Identity on the Web {#identity}
+## Identity on the Web {#identity}
 
 <aside class="issue">
   This section has not been edited for narrative.
@@ -1028,7 +1028,7 @@ collecting the same piece of identifying information on both sites, or by correl
 of an event that occurs nearly-simultaneously on both sites.
 
 
-## Principles for Personal Data {#data}
+## Personal Data {#data}
 
 <aside class="issue">
   This section has not been edited for narrative.
@@ -1083,7 +1083,7 @@ be identifying, sensitive or otherwise privacy-harming.
 
 </div>
 
-## Principles for Sensitive Information {#hl-sensitive-information}
+## Sensitive Information {#hl-sensitive-information}
 
 Contributes to [=correlation=], [=identification=], [=secondary use=], and
 [=disclosure=].
@@ -1312,12 +1312,12 @@ to offer better protection by default? Given the contested nature of the [^a/pin
 the absence of a forcing function to support collective enforcement, the scheme failed to deliver
 improved privacy.
 
-## Principles for Guardians and Device Owners {#guardians-and-owners}
+## Guardians and Device Owners {#guardians-and-owners}
 
 <aside class="issue" data-number="2">
 </aside>
 
-## Principles for Harassment
+## Harassment
 
 <aside class="issue">
   This section has not been written.
@@ -1364,14 +1364,14 @@ more accountable. Examples of mitigations include:
   sharing of [=information=] for safety purposes should be limited and placed under collective
   governance.
 
-## Principles for Vulnerable People
+## Vulnerable People
 
 <aside class="issue">
   This section has not been written.
 </aside>
 
 
-## Principles for Consent, Withdrawal of Consent, Opt-Outs, and Objections {#consent-principles}
+## Consent, Withdrawal of Consent, Opt-Outs, and Objections {#consent-principles}
 
 <div class="practice">
 <p>
@@ -1421,7 +1421,7 @@ Examples of alternatives to interrupting users with consent requests include:
 </div>
 
 
-## Principles for Notifications and Interruptions {#interruptions}
+## Notifications and Interruptions {#interruptions}
 
 <aside class="issue">This is related to [=autonomy=].</aside>
 
