--- a/index.html
+++ b/index.html
@@ -1536,9 +1536,16 @@ web page they're looking at. The [=party=] that controls this [=origin=] or [=si
 known as the web page's <dfn data-dfn-for="page">first party</dfn>. When a [=person=]
 interacts with a UI element on a web page, the <dfn>first party</dfn> of that interaction
 is usually the web page's [=page/first party=]. However, if a different [=party=] controls
-the UI element, and a reasonable person with a realistic cognitive budget would realize
-that this other [=party=] controls the UI element they're interacting with, this other
+how data collected with
+the UI element is used, and a reasonable person with a realistic cognitive budget would realize
+that this other [=party=] has this control, this other
 [=party=] is the [=first party=] for the interaction instead.
+
+<aside class="issue">
+  The group believes that the definition of [=first party=] provided above needs further refinement.
+  Please see <a href="https://github.com/w3ctag/privacy-principles/issues/152">this issue</a>
+  for more details.
+</aside>
 
 The [=first party=] to an interaction is accountable for the processing of data produced
 by that interaction, even if another party does the processing.
