--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,7 @@ of an event that occurs nearly-simultaneously on both sites.
 </aside>
 
 <aside class="issue">
-  There is not currnetly consensus among the authors and contributors to this
+  There is not currently consensus among the authors and contributors to this
   document about the below principles.
   Please see <a href="https://github.com/w3ctag/privacy-principles/issues/150">this issue</a>
   for more details.
