add Jeffrey's w3cid

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         name: 'Jeffrey Yasskin',
         company: 'Google',
         companyURL: 'https://google.com/',
+        w3cid: 75192,
       }],
       github: 'w3ctag/privacy-principles',
       shortName: 'privacy',
