Revert the change to the shortname.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         w3cid: 75192,
       }],
       github: 'w3ctag/privacy-principles',
-      shortName: 'privacy',
+      shortName: 'privacy-principles',
       lint: {
         'required-sections': false,
       },
