Fix a small formatting issue.

--- a/index.html
+++ b/index.html
@@ -647,8 +647,7 @@ TAG's resolution on a [Strong and Secure Web Platform](https://www.w3.org/blog/2
 to ensure that "<i>broad testing and audit continues to be possible</i>" where
 [=information flows=] and automated decisions are involved.
 
-Such transparency can only function if there are strong
-<!-- [rights](#data-rights) --> rights
+Such transparency can only function if there are strong rights
 of access to data (including data
 derived from one's personal data) as well as mechanisms to explain the outcomes of automated
 decisions.
