Add an example of tension within anti-profiling designs.

--- a/index.html
+++ b/index.html
@@ -951,6 +951,21 @@ suspicious login actually comes from the real account owner.
 
 </aside>
 
+<aside class="example" id="example-profiling" title="Profiling">
+
+Vendors want to advertise to the people most likely to buy their products, and being able
+to do so is worth money and engineering time. Historically, the vendors have done that by
+(hiring a company to) track people across websites in order to build up a profile of those
+people, violating the principles in [[[#identity]]]. User agents have started to block the
+simpler tracking vectors, but since targeting is valuable, it can fund development of more
+complex tracking vectors, including methods that are impossible for user agents to block.
+User agents have the option to directly help vendors target their ads, which undercuts
+development of the more complex tracking vectors, but targeting information is [personal
+data](#data). Proposals in this space need to incorporate both groups of principles in
+order to protect privacy.
+
+</aside>
+
 # Principles for Privacy on the Web
 
 As indicated above, different [=contexts=] require different [=principles=]. This section describes a set
