--- a/index.html
+++ b/index.html
@@ -172,13 +172,6 @@
           href: 'https://www.cambridge.org/core/books/governing-privacy-in-knowledge-commons/FA569455669E2CECA25DF0244C62C1A1',
           publisher: 'Cambridge University Press',
         },
-        'Governance-Through-Privacy': {
-          title: "Governance Through Privacy, Fairness, and Respect for Individuals",
-          authors: ['Dixie B. Baker', 'Jane Kaye', 'Sharon F. Terry'],
-          date: '2016-03-31',
-          publisher: "eGEMs",
-          href: 'https://doi.org/10.13063/2327-9214.1207',
-        },
         'GPC': {
           title: 'Global Privacy Control (GPC)',
           authors: ['Robin Berjon', 'Sebastian Zimmeck', 'Ashkan Soltani', 'David Harbage', 'Peter Snyder'],
@@ -1057,10 +1050,8 @@ of an event that occurs nearly-simultaneously on both sites.
 <div class="practice">
 
 <p><span class="practicelab" id="user-agent-data-sharing">
-A person's personal information should never be collected, used, transmitted, or disclosed
-in a way that would surprise the person were they to learn about it
-[[Governance-Through-Privacy]]. This information should also be needed for the person's
-goals.</span></p>
+User agents should only share information about the user that the user can reasonably
+anticipate being shared, and which directly relate to the user's goals.</span></p>
 
 User agents and sites should be conservative when deciding if information is related to a users goals; the
 longer the chain of reasoning used to justify data collection, the less likely for that data
