add additional characteristics used to identify users

--- a/index.html
+++ b/index.html
@@ -885,8 +885,7 @@ store data about that [=person=]. Examples of [=identifiers=] for a [=person=] c
 * their phone number,
 * their location data,
 * an online identifier such as email or IP addresses, or
-* factors specific to their physical, physiological, genetic, mental, economic, cultural, or social
-[=identity=].
+* factors specific to their physical, physiological, genetic, mental, economic, cultural, social, behavioral, or browser [=identity=].
 
 Strings derived from [=identifiers=], for instance through hashing, are still
 [=identifiers=] so long as they may identify a [=person=].
