Oxford comma FTW

--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@ store data about that [=person=]. Examples of [=identifiers=] for a [=person=] c
 * their phone number,
 * their location data,
 * an online identifier such as email or IP addresses,
-* browser fingerprints (based on a combination of configuration characteristics) or
+* browser fingerprints (based on a combination of configuration characteristics), or
 * factors specific to their physical, physiological, genetic, mental, economic,
 cultural, social, or behavioral [=identity=].
 
