add additional characteristics used to identify users (#167)
* add additional characteristics used to identify users

* reformat text

* address feedback reviews

separated out the browser fingerprint characteristics

* Oxford comma FTW

Co-authored-by: Kyle Den Hartog <kdenhartog@brave.com>
Co-authored-by: Robin Berjon <robin@berjon.com>

--- a/index.html
+++ b/index.html
@@ -884,9 +884,10 @@ store data about that [=person=]. Examples of [=identifiers=] for a [=person=] c
 * an identification number including those mapping to a device that this [=person=] may be using,
 * their phone number,
 * their location data,
-* an online identifier such as email or IP addresses, or
-* factors specific to their physical, physiological, genetic, mental, economic, cultural, or social
-[=identity=].
+* an online identifier such as email or IP addresses,
+* browser fingerprints (based on a combination of configuration characteristics), or
+* factors specific to their physical, physiological, genetic, mental, economic,
+cultural, social, or behavioral [=identity=].
 
 Strings derived from [=identifiers=], for instance through hashing, are still
 [=identifiers=] so long as they may identify a [=person=].
