add additional characteristics used to identify users (#167)
SHA: e71efcfc7b1cac02eac602cb08a613ea7a1e108f
Reason: push, by @darobin

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1158,9 +1158,10 @@ store data about that <a data-link-type="dfn" href="#dfn-individual" class="inte
 <li>an identification number including those mapping to a device that this <a data-link-type="dfn" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-57">person</a> may be using,</li>
 <li>their phone number,</li>
 <li>their location data,</li>
-<li>an online identifier such as email or IP addresses, or</li>
-<li>factors specific to their physical, physiological, genetic, mental, economic, cultural, or social
-<a data-link-type="dfn" href="#dfn-identity" class="internalDFN" id="ref-for-dfn-identity-5">identity</a>.</li>
+<li>an online identifier such as email or IP addresses,</li>
+<li>browser fingerprints (based on a combination of configuration characteristics), or</li>
+<li>factors specific to their physical, physiological, genetic, mental, economic,
+cultural, social, or behavioral <a data-link-type="dfn" href="#dfn-identity" class="internalDFN" id="ref-for-dfn-identity-5">identity</a>.</li>
 </ul>
 <p>Strings derived from <a data-link-type="dfn" href="#dfn-identifier" class="internalDFN" id="ref-for-dfn-identifier-2">identifiers</a>, for instance through hashing, are still
 <a data-link-type="dfn" href="#dfn-identifier" class="internalDFN" id="ref-for-dfn-identifier-3">identifiers</a> so long as they may identify a <a data-link-type="dfn" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-58">person</a>.</p>
