--- a/index.html
+++ b/index.html
@@ -940,6 +940,10 @@ share data between the contexts, the fact that those distinct [=contexts=] fall 
 [=machine-enforceable context=] doesn't make sharing data or [=cross-context
 recognition|recognizing=] [=identities=] any less [=inappropriate=].
 
+Websites should not have undue influence on the user’s choice, such as coercing sign-in 
+when the user did not want to present an identity or hasn’t sufficiently engaged with a website. 
+The user agent should protect the user from coercion and support their choices.
+
 ### Unwanted cross-context recognition {#hl-recognition-cross-context}
 
 <aside class="issue">Merge this into its parent section on identity.</aside>
