--- a/index.html
+++ b/index.html
@@ -1034,16 +1034,16 @@ collecting the same piece of identifying information on both sites, or by correl
 of an event that occurs nearly-simultaneously on both sites.
 
 
-## Personal Data {#data}
+## Data minimization {#data}
 
 <aside class="issue">
   This section has not been edited for narrative.
 </aside>
 
 <aside class="issue">
-  There is not currently consensus among the authors and contributors to this
-  document about the below principles.
-  Please see <a href="https://github.com/w3ctag/privacy-principles/issues/150">this issue</a>
+  There is not currently consensus among the authors and contributors to this document about the below
+  principles. Please see <a href="https://github.com/w3ctag/privacy-principles/issues/150">this
+  issue</a>
   for more details.
 </aside>
 
@@ -1053,48 +1053,75 @@ about people that is shared with or transferred between parties on the Web.</spa
 Data minimization limits the risks of data being disclosed or misused and also makes it possible to
 more meaningfully provide people with understandable decisions about data about them.
 
-<span class="practicelab">APIs should be designed to minimize the amount of data that is requested
+<span class="practicelab">Web APIs should be designed to minimize the amount of data that is requested
 and provide granularity and user controls over personal data that is communicated to sites.</span>
 
 <aside class="note">
-This principle is further detailed in the TAG finding on <a
+This principle was further explored in an earlier TAG draft on <a
 href="https://www.w3.org/2001/tag/doc/APIMinimization-20100605.html">Data Minimization in Web
 APIs</a>.
 </aside>
 
 In maintaining duties of <a href="#dfn-duty-of-protection">protection</a>, <a
 href="#dfn-duty-of-discretion">discretion</a> and <a href="#dfn-duty-of-loyalty">loyalty</a>, user
-agents should be cautious about sharing data not necessary to satisfy a user's immediate goals.
+agents should be conservative when sharing data not necessary to satisfy a user's immediate goals.
 
-Data is often shared by user agents even outside the need to load and display a page for uses
-including: 
+On the Web, data is often shared even outside the need to load and display a page for <dfn>ancillary
+uses</dfn> including: 
 
-* usage reporting of sites or browser features; 
-* debugging site issues; 
-* measuring performance; 
-* detecting security problems or attacks; 
-* software updates; 
-* prefetching content. 
+* browser telemetry, including: 
+  * performance measurements, 
+  * measuring feature usage, 
+  * debugging site, browser and networking issues, and, 
+  * detecting security problems or attacks; 
+* site telemetry, including: 
+  * performance measurements, 
+  * analytics about usage and visitors, 
+  * debugging site issues, and, 
+  * detecting security problems or attacks; 
+* advertising and social media sharing, including: 
+  * measurement, targeting, ad auctions, personalization, fraud prevention; 
+* performance, including caching and prefetching content; 
+* software updates.
 
 In some cases, mechanisms for sharing data are provided in order to minimize some other data
 collection mechanism identified as more intrusive or costly.
 
-For some uses, some people would reasonably anticipate sharing such data and some people would be
-willing to participate (for example, might have explicitly decided to contribute if they had the
-time and understanding to consider details about such a use) and some people would identify those
-uses as supporting their own goals. 
+For some uses, some people would reasonably anticipate sharing such data or identify that use as a
+commonly-accepted contextual norm and some people would be willing to participate (for example, might
+have explicitly decided to contribute if they had the time and understanding to consider details about
+such a use) and some people would identify those uses as supporting their own goals. 
 
 Aggregated or <a href="#dfn-de-identified">de-identified</a> data is often more likely to be
 acceptable in these senses and often still contributes to the collective benefit while minimizing
 privacy threats to a particular individual (see <a href="#principle-collective-privacy">collective
-privacy</a>). But some users might also object, in particular instances or in general. In order to
-distinguish these cases, asking people about their goals and preferences is best.
+privacy</a>). But some users might also object, in particular instances or in general.
 
-<span class="practicelab">Sites and user agents should directly ask people about their goals and
-their preferences about use of data about them.</span>
+<span class="practicelab">Sites and user agents should seek to understand and respect people's goals
+and preferences about use of data about them.</span>
 
-Because personal data may be sensitive in unexpected ways, or have risks of future uses that could
-be unexpected or harmful, minimization as a principle applies to personal data that is not currently
+Agents should both be conservative in applying data minimization to any <a
+href="#dfn-ancillary-uses">ancillary use</a> and also not burden the user with additional [=privacy
+labor=]. To that end, user agents may employ user research, solicitation of general preferences, and
+heuristics about sensitivity of data or trust in a particular context. To facilitate site
+understanding of user preferences, user agents can provide browser-configurable signals to directly
+communicate common user preferences.
+
+<aside class="example">
+  Sites and browsers wish to collect telemetry data to determine how frequently features are used or
+  to debug breakages, but the user agent does not want to burden the user with frequent consent
+  requests. A browser could use a first-run dialog to ask the user whether they generally support
+  sharing data to find bugs and improve the Web software they use, and then enable or disable
+  telemetry and reporting APIs based on the user's choice.
+</aside>
+
+<aside class="example">
+  A user visits a mapping website that they regularly visit and clicks a locator icon; although
+  precise geolocation can be very sensitive, the user agent can readily determine the user's intent.
+</aside>
+
+Because personal data may be sensitive in unexpected ways, or have risks of future uses that could be
+unexpected or harmful, minimization as a principle applies to personal data that is not currently
 known to be identifying, sensitive or otherwise potentially harmful.
 
 ## Sensitive Information {#hl-sensitive-information}
