--- a/index.html
+++ b/index.html
@@ -939,10 +939,16 @@ If a [=site=] includes multiple [=contexts=] whose [=principles=] indicate that 
 share data between the contexts, the fact that those distinct [=contexts=] fall inside a single
 [=machine-enforceable context=] doesn't make sharing data or [=cross-context
 recognition|recognizing=] [=identities=] any less [=inappropriate=].
+ 
+The user agent and identity related web features should:
+* help users present the identity that they want to present to a given website.
+* disclose the least amount of identifying information, examples:
+  * ability to not unconditionally share the user's profile data with the website.
+  * if the website needs a minimum age, then share that the user is older than 21, 
+  as opposed to specific age or date of birth.
+* support the user's intent to present a site-specific identity. If the website requires an email, 
+then the user may choose a directed identifier without disclosing their real email.
 
-Websites should not have undue influence on the user’s choice, such as coercing sign-in 
-when the user did not want to present an identity or hasn’t sufficiently engaged with a website. 
-The user agent should protect the user from coercion and support their choices.
 
 ### Unwanted cross-context recognition {#hl-recognition-cross-context}
 
