add example about ppm, encryption and proxy techniques

--- a/index.html
+++ b/index.html
@@ -1037,10 +1037,6 @@ of an event that occurs nearly-simultaneously on both sites.
 ## Data minimization {#data}
 
 <aside class="issue">
-  This section has not been edited for narrative.
-</aside>
-
-<aside class="issue">
   There is not currently consensus among the authors and contributors to this document about the below
   principles. Please see <a href="https://github.com/w3ctag/privacy-principles/issues/150">this
   issue</a>
@@ -1095,7 +1091,23 @@ such a use) and some people would identify those uses as supporting their own go
 Aggregated or <a href="#dfn-de-identified">de-identified</a> data is often more likely to be
 acceptable in these senses and often still contributes to the collective benefit while minimizing
 privacy threats to a particular individual (see <a href="#principle-collective-privacy">collective
-privacy</a>). But some users might also object, in particular instances or in general.
+privacy</a>). But some people might also object, in particular instances or in general.
+
+<aside class="example">
+  Privacy-preserving measurement techniques may be used for aggregate calculations while minimizing
+  the parties that have access to personal data about many individual people. Encryption and
+  privacy-preserving proxies may be used to minimize the parties that have access to personal data or
+  to hide the contents of personal data used for telemetry or other kinds of measurement. But even
+  with those protections, some people may prefer not to participate in some kinds of measurement.
+
+  Ongoing work on privacy-preserving technologies in the <abbr title="Internet Engineering Task
+  Force">IETF</abbr> <a href="https://datatracker.ietf.org/wg/ppm/about/"><abbr
+  title="privacy-preserving measurement">ppm</abbr></a>, <abbr title="Internet Research Task
+  Force">IRTF</abbr> <a href="https://datatracker.ietf.org/rg/pearg/about/"><abbr title="Privacy
+  Enhancements and Assessments Research Group">pearg</abbr></a> and W3C <a
+  href="https://patcg.github.io/"><abbr title="Private Advertising Technology Community
+  Group">PATCG</abbr></a> groups may be relevant. 
+</aside>
 
 <span class="practicelab">Sites and user agents should seek to understand and respect people's goals
 and preferences about use of data about them.</span>
