Editorial: fix markup

--- a/index.html
+++ b/index.html
@@ -890,12 +890,9 @@ if the same data were shared between unrelated [=parties=].
 
 <div class="practice">
 
-<span class="practicelab" id="principle-identity-per-context">
-
-A [=user agent=] should help its user present the [=identity=] they want in
-each [=context=] they are in.
-
-</span>
+<span class="practicelab" id="principle-identity-per-context">A [=user agent=]
+should help its user present the [=identity=] they want in each [=context=]
+they are in.</span>
 
 </div>
 
