Editorial: move definition of personal data into personal data principle

--- a/index.html
+++ b/index.html
@@ -1086,11 +1086,19 @@ site - involves making subjective assumptions about the user.
 <div class="practice">
 
 <span class="practicelab" id="sensitive-vs-non-sensitive-data">
-User agents should treat all personal data as sensitive, and should not
+User agents should treat all [=personal data=] as sensitive, and should not
 attempt to distinguish sensitive from nonsensitive information.
 </span>
 
 </div>
+
+We define <dfn data-lt="data">personal data</dfn> as any information that is
+directly or indirectly related to an identified or identifiable [=person=],
+such as by reference to an [=identifier=] ([[GDPR]], [[OECD-Guidelines]],
+[[Convention-108]]).
+
+If a [=person=] could reasonably be identified or re-identified when [=data=]
+is combined with other [=data=], then that makes that data [=personal data=].
 
 All data and personal information is likely to be sensitive to someone, often
 in ways unanticipated by browser vendors and site operators.
@@ -1588,13 +1596,6 @@ party=] that maintains exclusive access to a person's data can still [=process=]
 but still treat it [=appropriately=].
 
 ## Acting on Data {#acting-on-data}
-
-We define <dfn data-lt="data">personal data</dfn> as any information that is directly or
-indirectly related to an identified or identifiable [=person=], such as by reference to an
-[=identifier=] ([[GDPR]], [[OECD-Guidelines]], [[Convention-108]]).
-
-If a [=person=] could reasonably be identified or re-identified when [=data=] is combined with other
-[=data=], then that makes that data [=personal data=].
 
 <dfn>Privacy</dfn> is achieved in a given [=context=] that either involves [=personal data=] or
 involves information being presented to [=people=] when the [=principles=] of that [=context=] are
