Make the impact data combination on de-identification clearer, using changed language from IJ (fixes #146)

--- a/index.html
+++ b/index.html
@@ -939,7 +939,7 @@ If a [=site=] includes multiple [=contexts=] whose [=principles=] indicate that 
 share data between the contexts, the fact that those distinct [=contexts=] fall inside a single
 [=machine-enforceable context=] doesn't make sharing data or [=cross-context
 recognition|recognizing=] [=identities=] any less [=inappropriate=].
- 
+
 The user agent and identity related web features should:
 * help users present the identity that they want to present to a given website.
   * should not reveal user's profile information without user consent.
@@ -1588,8 +1588,8 @@ We define <dfn data-lt="data">personal data</dfn> as any information that is dir
 indirectly related to an identified or identifiable [=person=], such as by reference to an
 [=identifier=] ([[GDPR]], [[OECD-Guidelines]], [[Convention-108]]).
 
-If a [=person=] could reasonably be identified or re-identified when [=data=] is combined with other
-[=data=], then that makes that data [=personal data=].
+If a [=person=] could reasonably be identified or re-identified through the combination of [=data=] with other
+[=data=], then that [=data=] is [=personal data=].
 
 <dfn>Privacy</dfn> is achieved in a given [=context=] that either involves [=personal data=] or
 involves information being presented to [=people=] when the [=principles=] of that [=context=] are
